--- a/Apresentacao/Properties/Resources.resx
+++ b/Apresentacao/Properties/Resources.resx
@@ -124,14 +124,17 @@
   <data name="right_round_25px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Imagens\right_round_25px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="left_round_25px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Imagens\left_round_25px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="Pesquisasearch_25px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Imagens\Pesquisasearch_25px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Marker_25px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Imagens\Marker_25px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="end_25px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Imagens\end_25px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Exit_25px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Imagens\Exit_25px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Edit_25px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Imagens\Edit_25px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -172,13 +175,16 @@
   <data name="Report Card_25px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Imagens\Report Card_25px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Exit_25px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Imagens\Exit_25px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="left_round_25px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Imagens\left_round_25px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Delete_25px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Imagens\Delete_25px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Marker_25px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Imagens\Marker_25px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Microsoft Excel_25px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Imagens\Microsoft Excel_25px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Upload_25px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Imagens\Upload_25px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
