termino de customização do form A22 cadastro

--- a/Apresentacao/Properties/Resources.resx
+++ b/Apresentacao/Properties/Resources.resx
@@ -118,23 +118,26 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="Handshake_25px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Imagens\Handshake_25px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Globe_25px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Imagens\Globe_25px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="right_round_25px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Imagens\right_round_25px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="left_round_25px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Imagens\left_round_25px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Pesquisasearch_25px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Imagens\Pesquisasearch_25px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Marker_25px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Imagens\Marker_25px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Microsoft Excel_25px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Imagens\Microsoft Excel_25px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="end_25px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Imagens\end_25px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Exit_25px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Imagens\Exit_25px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Edit_25px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Imagens\Edit_25px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -145,6 +148,9 @@
   <data name="Save_25px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Imagens\Save_25px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Upload_25px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Imagens\Upload_25px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Plus_25px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Imagens\Plus_25px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -154,8 +160,8 @@
   <data name="Search_25px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Imagens\Search_25px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Handshake_25px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Imagens\Handshake_25px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Marker_25px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Imagens\Marker_25px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Map Marker_25px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Imagens\Map Marker_25px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -175,16 +181,28 @@
   <data name="Report Card_25px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Imagens\Report Card_25px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="left_round_25px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Imagens\left_round_25px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Exit_25px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Imagens\Exit_25px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Delete_25px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Imagens\Delete_25px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Microsoft Excel_25px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="trash_15px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Imagens\trash_15px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="search_15px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Imagens\search_15px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="edit_15px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Imagens\edit_15px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="plus_15px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Imagens\plus_15px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Microsoft Excel_25px1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Imagens\Microsoft Excel_25px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Upload_25px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="Upload_25px1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Imagens\Upload_25px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
